add vote visibal limit

--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -44,6 +44,12 @@
     <div class="controls">
       <%= f.check_box :is_disabled %>
     </div>
+    <div class="control-group">
+      <%= f.label :is_public, class: "control-label" %>
+      <div class="controls">
+        <%= f.check_box :is_public %>
+      </div>
+    </div>
   </div>
 
   <div class="controls">
