--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -20,12 +20,14 @@
     <% vote.options.each do |opt| %>
     <tr>
       <td style="padding: 5px; width: 130px;"><%= opt.content %></td>
-      <td style="padding: 5px; width: 180px;">  
-        <div class="progress progress-warning" style="margin: 0px;">
-          <div class="bar" style="width: <%= (opt.count * 100.0 / vote.voters_count).to_s + "%" %>">
+      <%- if vote.is_public %>
+        <td style="padding: 5px; width: 180px;">  
+          <div class="progress progress-warning" style="margin: 0px;">
+            <div class="bar" style="width: <%= (opt.count * 100.0 / vote.voters_count).to_s + "%" %>">
+            </div>
           </div>
-        </div>
-      </td>
+        </td>
+      <% end -%>
     </tr>
     <% end -%>
   </table>
