--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -2,13 +2,15 @@
 <div class="verl" style="left: 380px;"></div>
 <div style="width: 220px; float: right;">
   <% @votes.hottest[0..8].each do |vote| %>
-    <% data = vote.options.map{|a|a.count}.each_with_index.max %>
-    <% break if data[0] == 0 %>
-    <% next if vote.voters_count == 0 %>
-    <div class="mb10">
-      <span style="font: 28px 'Times New Roman'; font-style: italic; " class="text-error"><%= data[0] * 100 / vote.voters_count %>%</span>
-      的人在 <%= link_to vote.title, vote %> 中选择了 <%= vote.options[data[1]].content %>
-    </div>
+    <% if vote.is_public %>
+      <% data = vote.options.map{|a|a.count}.each_with_index.max %>
+      <% break if data[0] == 0 %>
+      <% next if vote.voters_count == 0 %>
+      <div class="mb10">
+        <span style="font: 28px 'Times New Roman'; font-style: italic; " class="text-error"><%= data[0] * 100 / vote.voters_count %>%</span>
+        的人在 <%= link_to vote.title, vote %> 中选择了 <%= vote.options[data[1]].content %>
+      </div>
+    <% end -%>
   <% end -%>
 </div>
 
@@ -20,7 +22,7 @@
     <% vote.options.each do |opt| %>
     <tr>
       <td style="padding: 5px; width: 130px;"><%= opt.content %></td>
-      <%- if vote.is_public %>
+      <% if vote.is_public || is_admin? %>
         <td style="padding: 5px; width: 180px;">  
           <div class="progress progress-warning" style="margin: 0px;">
             <div class="bar" style="width: <%= (opt.count * 100.0 / vote.voters_count).to_s + "%" %>">
