--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -66,7 +66,7 @@
         <td style="width: 130px; padding-left: 0px;">
           <%= label_tag "options_#{opt.id}", opt.content %>
         </td>
-        <%- if @vote.is_public %>
+        <% if @vote.is_public || is_admin? %>
           <td style="width: 360px;">
             <div class="progress progress-warning" style="margin: 0px;">
               <div class="bar" style="width: <%= (opt.count * 100.0 / @vote.voters_count).to_s + "%" %>">
